tests/typerel/tno_int_in_bool_context.nim
discard """
  targets: native
  errormsg: "type mismatch: got <int literal(1)> but expected 'bool'"
  line: 7
"""

if 1:
  echo "wtf?"
